--- a/views/group.hbs
+++ b/views/group.hbs
@@ -13,23 +13,23 @@
                     <div class="" id="inputError">
                     <input type="text" class="form-control  has-warning" placeholder="Testnamn" id="testName" required>
                     </div>
-
+                    <div class="row">
                     <div class="col-lg-6">
                         <label for="name" class="cols-sm-2 control-label">Elever</label>
 
                         <!-- Display list of students in the database. -->
-                        <ul class="list-group" id="list" style="min-height:100px "></ul>
+                        <ul class="list-group panel panel-default" id="list" style="min-height:150px "></ul>
                     </div>
                     <div class="col-lg-6">
                         <label for="name" class="cols-sm-2 control-label">Tillagda elever</label>
                         <div id="missingMembers"  role="alert"></div>
 
                         <!-- contains students of the group that the user creates-->
-                    <ul class="list-group" id="groupList" style="min-height:100px ">
+                    <ul class="list-group panel panel-default" id="groupList" style="min-height:150px ">
 
                     </ul>
                     </div>
-
+                    </div>
                     <button id="createGroup" type="submit" class="btn btn-default" data-toggle="modal" data-target="#questionModal" >Skapa grupp</button>
 
 
