--- a/views/partials/_teacherNavbar.hbs
+++ b/views/partials/_teacherNavbar.hbs
@@ -18,6 +18,7 @@
                 <li><a href="/edit">Redigera</a></li>
                 <li><a href="/statistics">Statistik</a></li>
                 <li><a href="/share">Dela</a></li>
+                <li><a href="/correcting">Rätta prov</a></li>
             </ul>
 
             <button type="button" class="btn btn-default navbar-btn navbar-right" id="logout">Logga Ut</button>
