--- a/views/correcting.hbs
+++ b/views/correcting.hbs
@@ -1,46 +1,63 @@
 <div class="container">
     <div class="col-lg-10 col-lg-offset-1">
-        <h1 class="title">Rätta test</h1>
-        <hr/>
-
-        <div class="panel panel-default">
-            <div class="panel-heading clearfix">
-                <h3 class="panel-title">Fråga<span class="pull-right">Poäng: <input type="text"> / 10</span></h3>
+        <div class="row">
+            <div class="col-md-4">
+                <h1 class="title">Rätta test</h1>
             </div>
-            <div class="panel-body collapse">
-                <div class="col-md-6">
-                    <h4 class="title">Svar:</h4>
-                    <ul class="list-group">
-                        <li class="list-group-item">1</li>
-                        <li class="list-group-item">2</li>
-                        <li class="list-group-item">3</li>
-                    </ul>
-                </div>
-                <div class="col-md-6">
-                    <h4 class="title">Rätt svar:</h4>
-                    <ul class="list-group">
-                        <li class="list-group-item">1</li>
-
-                    </ul>
-                </div>
-                <div class="col-md-12">
-                    <textarea class="form-control collapse" style="resize: vertical"></textarea>
-                    <button type="button" class="btn btn-default commentButton">Kommentar på fråga</button>
-                </div>
+            <div class="col-md-4">
+                <select class="form-control" style="margin-top: 24px">
+                        <option>{{this.TTitle}}</option>
+                    {{/each}}
+                </select>
+            </div>
+            <div class="col-md-4">
+                <select class="form-control" style="margin-top: 24px">
+                    {{#students}}
+                        <option>{{FirstName}}</option>
+                    {{/students}}
+                </select>
             </div>
         </div>
+
+
+        <hr/>
+
+        {{#each question}}
+            <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h3 class="panel-title">{{this.Question}} ({{this.QType}})<span class="pull-right">Poäng: <input type="text" size="1"> / {{this.QPoints}}</span></h3>
+                </div>
+                <div class="panel-body collapse">
+                    <div class="col-md-6">
+                        <h4 class="title">Svar:</h4>
+                        <ul class="list-group">
+                            <li class="list-group-item">1</li>
+                            <li class="list-group-item">2</li>
+                            <li class="list-group-item">3</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h4 class="title">Rätt svar:</h4>
+                        <ul class="list-group">
+                            <li class="list-group-item">1</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-default commentButton">Kommentera fråga</button>
+                    </div>
+                </div>
+            </div>
+        {{/each}}
 
         <div class="panel panel-default">
             <div class="panel-heading clearfix">
                 <h3 class="panel-title">Kommentar för test</h3>
             </div>
             <div class="panel-body collapse">
-                <ul class="list-group">
-                    <textarea class="form-control" style="resize: vertical"></textarea>
-                </ul>
+                <textarea class="form-control" rows="4" style="resize: vertical"></textarea>
             </div>
         </div>
-        <button type="button" class="btn btn-info">Rätta test</button>
+        <button type="button" class="btn btn-primary">Rätta test</button>
     </div>
 </div>
 
