--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -20,6 +20,7 @@
                 <li><a href="/share">Dela</a></li>
                 <li><a href="/register">Registrera</a></li>
                 <li><a href="/group">Skapa grupp</a></li>
+                <li><a href="/correcting">Rätta prov</a></li>
             </ul>
 
             <button type="button" class="btn btn-default navbar-btn navbar-right" id="logout">Logga Ut</button>
