--- a/views/create.hbs
+++ b/views/create.hbs
@@ -295,7 +295,7 @@
                             </div>
 
                             <div class="row form-group">
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 form-group">
                                     <select class="form-control" id="typeSelectEdit">
                                         <option hidden>Välj Typ</option>
                                         <option value="fler" id="qTypeMulti">Flervalsfråga</option>
@@ -418,7 +418,7 @@
                 </div>
 
                 <div class="row form-group">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 form-group">
                         <select class="form-control" id="typeSelect">
                             <option hidden>Välj Typ</option>
                             <option id="qTypeMulti">Flervalsfråga</option>
