--- a/views/editMenu.hbs
+++ b/views/editMenu.hbs
@@ -5,7 +5,7 @@
 
         <!-- Test selection -->
         <h3 class="page-header">Välj test att redigera</h3>
-        <form action="/test" method="get">
+        <form action="" method="get">
             <select name="test" id="testSelect" class="form-control">
                 {{#each tests}}
                     <option class="{{this.TestId}}">{{this.TTitle}}</option>
