--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -17,10 +17,15 @@
                 <li><a href="/create">Skapa</a></li>
                 <li><a href="/editMenu">Redigera</a></li>
                 <li><a href="/statistics">Statistik</a></li>
-                <li><a href="/share">Dela</a></li>
-                <li><a href="/register">Registrera</a></li>
-                <li><a href="/group">Skapa grupp</a></li>
                 <li><a href="/correcting">Rätta prov</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Användare<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/share">Dela</a></li>
+                        <li><a href="/register">Registrera</a></li>
+                        <li><a href="/group">Skapa grupp</a></li>
+                    </ul>
+                </li>
             </ul>
 
             <button type="button" class="btn btn-default navbar-btn navbar-right" id="logout">Logga Ut</button>
