--- a/views/correcting.hbs
+++ b/views/correcting.hbs
@@ -5,7 +5,7 @@
                 <h1 class="title">Rätta test</h1>
             </div>
             <div class="col-md-4">
-                <select class="form-control" id="testSelector" style="margin-top: 24px">
+                <select class="form-control" id="testSelector" style="margin-top: 24px; margin-bottom: 0">
                     <option hidden>Välj test</option>
                     {{#each tests}}
                         <option>{{testname}}</option>
@@ -13,7 +13,7 @@
                 </select>
             </div>
             <div class="col-md-4">
-                <select class="form-control" id="userSelector" style="margin-top: 24px">
+                <select class="form-control" id="userSelector" style="margin-top: 24px; margin-bottom: 0">
                     <option hidden>Välj elev</option>
                 </select>
             </div>
