--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,7 +1,12 @@
 <!-- Content -->
 <div class="container" id="test">
-    <div class="col-lg-8 col-lg-offset-1">
-
+    <div class="col-lg-10 col-lg-offset-1">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title">Skapa Test!</h1>
+            </div>
+        </div>
+        <hr>
         <div class="panel panel-default notthis">
             <div class="panel-heading">
                 <h3 class="panel-title">Skapa nytt Test!</h3>
