--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -1,7 +1,13 @@
 <!-- Page showing statistics for selected test -->
 
 <div class="container" id="statistics">
-    <div class="col-lg-8">
+    <div class="col-lg-10 col-lg-offset-1">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title">Statistik</h1>
+            </div>
+        </div>
+        <hr>
         <div class="panel panel-default">
               <div class="panel-heading">
                     <h1 class="panel-title">Statistik</h1>
