--- a/views/editMenu.hbs
+++ b/views/editMenu.hbs
@@ -1,10 +1,14 @@
 <!-- Page for editing a test -->
 
-<div class="container">l
-    <div class="col-md-4 col-md-offset-4">
-
+<div class="container">
+    <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title">Redigera Test!</h1>
+            </div>
+        </div>
+        <hr>
         <!-- Test selection -->
-        <h3 class="page-header">Välj test att redigera</h3>
         <form action="" method="get">
             <select name="test" id="testSelect" class="form-control">
                 {{#each tests}}
