--- a/views/group.hbs
+++ b/views/group.hbs
@@ -1,6 +1,11 @@
 <div class="container" id="test">
-    <div class="col-lg-8 col-lg-offset-2">
-
+    <div class="col-lg-10 col-lg-offset-1">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title">Skapa Grupp!</h1>
+            </div>
+        </div>
+        <hr>
         <div class="panel panel-default notthis">
             <div class="panel-heading">
                 <h1 class="panel-title">Skapa grupp</h1>
