--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="row">
-        <div class="panel-heading">
-            <div class="panel-title text-center">
-                <h1 class="title">Registrera Användare</h1>
-                <hr/>
-            </div>
-        </div>
-                <div class="col-md-4 col-md-offset-4">
+
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h1 class="title">Registrera Användare</h1>
+                        </div>
+                    </div>
+                    <hr>
                     <form action="/register" method="post">
 
                         <!-- First Name -->
@@ -45,13 +45,7 @@
                     </form>
                 </div>
         </div>
-    </div>
 
-    <style>
-        .row {
-            margin-top: 50px;
-        }
-</style>
  <!-- Script controls that the user enters all the values when registering new user. -->
 <script>
     $("#registerButton").click(function (event) {
