--- a/views/share.hbs
+++ b/views/share.hbs
@@ -1,10 +1,14 @@
 <!-- Page for sharing tests with groups or specific students -->
 
 <div class="container" id="shareTest">
-    <div class="col-md-4 col-md-offset-4">
-
+    <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="title">Dela Test</h1>
+            </div>
+        </div>
+        <hr>
                 <!-- Test selection -->
-                <h3 class="page-header">Välj test</h3>
                 <form action="/test" method="get">
                     <select name="test" id="testName" class="form-control">
                         {{#each tests}}
