--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1,9 +1,10 @@
 body {
-    margin-top: 60px;
+    margin-top: 50px;
     margin-bottom: 75px;
 }
 .jumbotron {
-    padding-top: 75px;
+    padding-top: 100px;
+    background: url('test.jpg') center center;
 }
 
 #features {
