Förbereder för statistik

--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -22,6 +22,11 @@
                               <option class="{{this.TestId}}">{{this.TTitle}}</option>
                           {{/each}}
                       </select>
+                      <select name="group" id="groupSelect" class="form-control">
+                          {{#group}}
+
+                          {{/group}}
+                      </select>
                   </form>
 
                   <!-- Displaying statistics -->
